Добавить новую функциональность по ТЗ 6го спринта